# BattleShip

./: README.md  api.json
.circleci/: config.yml
client/: .gitignore  elm-oracle  elm.json  index.html  index.js  package-lock.json  package.json  shell.nix
server/: .flake8  .gitignore  .tool-versions  app.py  config.py  conftest.py  pyproject.toml  shell.nix
server/battlefield/: __init__.py
server/battlefield/game/data/: websocket.py
server/battlefield/game/domain/: entities.py
server/battlefield/game/domain/use_cases/: game_status_getter.py  play.py  responder.py  toggle_turn.py  updater.py
server/battlefield/session/: __init__.py  api.py  creator.py  mappers.py  models.py
server/battlefield/session/data/: api.py  data_access.py  db.py  presenters.py
server/battlefield/session/data/api/: multi.py  single.py
server/battlefield/session/domain/: entities.py  repository.py
server/battlefield/session/domain/use_cases/: creator.py  lister.py
server/battlefield/utils/: __init__.py  json.py  models.py
server/tests/: __init__.py  test_routes.py
server/tests/game/domain/: test_responder.py
server/tests/game/domain/use_cases/: test_game_status_getter.py  test_play.py  test_responder.py  test_status_getter.py  test_toggle_turn.py  test_updater.py
server/tests/session/: test_api.py  test_creator.py  test_mapper.py  test_model.py
server/tests/session/data/: test_api.py  test_data_access.py  test_mapper.py
server/tests/session/domain/: test_repo.py
server/tests/session/domain/use_cases/: test_lister.py
server/tests/utils/: test_json.py
(+19 files in other folders)
