[tool.poetry]
name = "battlefield"
version = "0.1.0"
description = "Testing Quart and Websockets"
authors = ["CristhianMotoche <cristhian.motoche@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
Quart = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
