[tool.poetry]
name = "battlefield"
version = "0.1.0"
description = "Testing Quart and Websockets"
authors = ["CristhianMotoche <cristhian.motoche@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
Quart = "^0.11.1"
tortoise-orm = "^0.13.10"
aiosqlite = "^0.10.0"
object-mapper = "^1.1"
quart-openapi = "^1.5"
flake8 = "^3.7"
Quart-CORS = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-asyncio = "^0.10.0"
pytest-dotenv = "^0.4.0"
black = "^19.10b0"
python-dotenv = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
